CHANGELOG fuer c't-Bot
======================
2006-04-04  Torsten Evers (tevers@onlinehome.de) bot_turn ueberarbeitet

2006-04-04  Daniel Bachfeld (dab@heise.de) Motorregelung eingefuehrt

2006-03-27	Andreas Merkle (mail@blue-andi.de)	Zeiger, welche als Funktionszeiger verwendet wurden, ersetzt.

2006-03-31	Frank Menzel (Menzelfr@gmx.de) RC5-Signale werden nur noch mit geaendertem Toggle-Bit akzeptiert

2006-03-28 	Peter Koenig (pek@ctmagazin.de) Alle int in bot-logik.c/.h nach Absprache mit Christoph Grimmer in int16 bzw. int8 umgewandelt

2006-03-24  Andreas Staudenmayer (andreas.staudenmayer@t-online.de) Fernbedienung VIVANCO UR89 eingefuegt

2006-02-24	Fabian Recktenwald (fa.re.wal@gmx.de) Alle char-Datentypen in int8 oder uint8 umgewandelt

2006-03-24  Benjamin Benz (bbe@heise.de)  Bugfix rc5_bot_next_behaviour

2006-03-23  Benjamin Benz (bbe@heise.de)  Bugfix in bot_turn()

2006-03-22	Andreas Merkle (mail@blue-andi.de)	Die Funktionen in delay_pc.c mit Funktionalitaet hinterlegt.

2006-03-23  Benjamin Benz (bbe@heise.de)  Display-Delay auf optimierten Code angepasst, Verhaltensinitialisierung uebersichtlicher gestaltet

2006-03-20	Carsten Giesen (info@cnau.de) Codes fuer die FB des MediaMPV von Hauappauge eingepflegt

2006-03-19	Andreas Merkle (mail@blue-andi.de)	Timer Variablen ueber Funktionen auf dem PC geschuetzt (Thread-Safe).

2006-03-21	Benjamin Benz (bbe@heise.de)  RC5-Mask-Definition in rc5-codes.h umgezogen

2006-03-19	Lukas Jelonek (ljelonek@techfak.uni-bielefeld.de) Motoren verhalten sich nun links und rechts identisch

2006-03-19	Benjamin Benz (bbe@heise.de)  Der simulierte Bot nutzt nun auch den Maussensor

2006-03-19	Benjamin Benz (bbe@heise.de)  Der PC darf jetzt FB-Kommandos per UART an den realen Bot uebertragen

2006-03-18  Michail Brzitwa (michail@brzitwa.de)    Definition und Selektierbarkeit verschiedener Fernbedienungen in rc5-codes.h
